--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:image" content="image/bot.png">
+  <meta property="og:image" content="bot.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:description" content="Created by Kenneth Aceberos (Neth). PROJECT BOTIFY is a 100% free bot making website.">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="image/icon.png">
+  <link rel="icon" href="icon.png">
   <title>Project Botify</title>
 </head>
 <body id="botifymain">
